--- a/helper_dockerfiles/Dockerfile-yaml
+++ b/helper_dockerfiles/Dockerfile-yaml
@@ -4,7 +4,7 @@ FROM public.ecr.aws/ubuntu/ubuntu:latest
 ENV TZ=Europe/London
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-# Instal prerequisites
+# Install prerequisites
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y git-all python3 python3-pip ruby-full && \
