--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -14,8 +14,12 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
     cd git-secrets && \
     make install
 
-
 WORKDIR /app
+RUN ls
+RUN cd ..
+RUN ls
+COPY /utils /app
+
 VOLUME /app
 
 
