--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -15,9 +15,9 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
     make install
 
 WORKDIR /app
-RUN ls
+RUN echo $(ls)
 RUN cd ..
-RUN ls
+RUN RUN echo $(ls)
 COPY /utils /app
 
 VOLUME /app
