--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -16,9 +16,8 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
 
 WORKDIR /app
 RUN echo $(ls)
-RUN cd ..
-RUN RUN echo $(ls)
 COPY /utils /app
+RUN echo $(ls)
 
 VOLUME /app
 
