--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -16,7 +16,7 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
 
 WORKDIR /app
 RUN echo $(ls)
-COPY /utils /app
+COPY utils /app
 RUN echo $(ls)
 
 VOLUME /app
