--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -15,8 +15,8 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
     make install
 
 WORKDIR /app
-RUN echo $(ls)
 COPY utils app
+RUN cd app
 RUN echo $(ls)
 
 VOLUME /app
