--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -16,8 +16,7 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
 
 WORKDIR /app
 COPY utils app
-RUN cd app
-RUN echo $(ls)
+RUN echo $(ls /app)
 
 VOLUME /app
 
