--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -15,7 +15,8 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
     make install
 
 WORKDIR /app
-COPY utils app
+RUN mkdir utils /app
+COPY utils app/utils
 RUN echo $(ls /app)
 
 VOLUME /app
