--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -15,7 +15,7 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
     make install
 
 WORKDIR /app
-RUN mkdir utils /app
+RUN mkdir app/utils
 COPY utils app/utils
 RUN echo $(ls /app)
 
