add copy to dockerfile

--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -20,7 +20,5 @@ COPY utils /utils
 RUN echo $(ls)
 RUN echo $(ls /utils)
 
-VOLUME /app
-
-
 CMD bash -C /utils/git-docker-execute.sh
+CMD bash -C /app/utils/git-docker-execute.sh
