--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -20,4 +20,6 @@ COPY utils /utils
 RUN echo $(ls)
 RUN echo $(ls /utils)
 
-CMD bash -C /app/utils/git-docker-execute.sh
+CMD [ "sh", "-c", "ls" ]
+# CMD bash -C utils/git-docker-execute.sh
+
