--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -15,15 +15,14 @@ RUN git clone https://github.com/awslabs/git-secrets.git && \
     make install
 
 WORKDIR /app
-#RUN mkdir utils
-#COPY utils /utils
-COPY utils /
+RUN mkdir utils
+COPY utils /utils
 RUN echo $(ls)
-#RUN echo $(ls /utils -la)
-RUN chmod -R +x /
+RUN echo $(ls /utils -la)
+RUN chmod -R +x utils
 
 #CMD [ "sh", "-c", "ls /utils -la" ]
 # RUN cat /utils/git-docker-execute.sh
-ENTRYPOINT ["git-docker-execute.sh"]
+CMD ["./utils/git-docker-execute.sh"]
 # CMD bash -C utils/git-docker-execute.sh
 
