--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -22,7 +22,7 @@ RUN echo $(ls /utils -la)
 RUN chmod -R +x utils
 
 #CMD [ "sh", "-c", "ls /utils -la" ]
-# RUN cat /utils/git-docker-execute.sh
-CMD ["./utils/git-docker-execute.sh"]
-# CMD bash -C utils/git-docker-execute.sh
+RUN cat /utils/git-docker-execute.sh
+# CMD ["./utils/git-docker-execute.sh"]
+CMD bash -C utils/git-docker-execute.sh
 
