--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -19,10 +19,10 @@ RUN mkdir utils
 COPY utils /utils
 RUN echo $(ls)
 RUN echo $(ls /utils -la)
-RUN chmod -R +x utils
+RUN chmod +x /utils/git-docker-execute.sh
 
 #CMD [ "sh", "-c", "ls /utils -la" ]
 RUN cat /utils/git-docker-execute.sh
 # CMD ["./utils/git-docker-execute.sh"]
-CMD bash -C utils/git-docker-execute.sh
+RUN bash -c "ls -al /; /utils/git-docker-execute.sh"
 
