--- a/helper_dockerfiles/Dockerfile-git
+++ b/helper_dockerfiles/Dockerfile-git
@@ -24,5 +24,5 @@ RUN chmod +x /utils/git-docker-execute.sh
 #CMD [ "sh", "-c", "ls /utils -la" ]
 RUN cat /utils/git-docker-execute.sh
 # CMD ["./utils/git-docker-execute.sh"]
-RUN bash -c "ls -al /; /utils/git-docker-execute.sh"
+RUN bash -c "ls -al /; pwd; /app/utils/git-docker-execute.sh"
 
