--- a/helper_dockerfiles/Dockerfile-js
+++ b/helper_dockerfiles/Dockerfile-js
@@ -2,6 +2,10 @@
 FROM public.ecr.aws/docker/library/node:latest
 
 WORKDIR /app
-VOLUME /app
+RUN mkdir ./utils
+COPY utils ./utils
+RUN echo $(ls)
+RUN echo $(ls ./utils -la)
+RUN chmod +x ./utils/js-docker-execute.sh
 
-CMD bash -C /utils/js-docker-execute.sh
+RUN bash -c "./js-docker-execute.sh"
