add copy to dockerfile

--- a/helper_dockerfiles/Dockerfile-grype
+++ b/helper_dockerfiles/Dockerfile-grype
@@ -12,4 +12,4 @@ RUN echo $(ls)
 RUN echo $(ls ./utils -la)
 RUN chmod +x ./utils/grype-docker-execute.sh
 
-RUN bash -c "./grype-docker-execute.sh"
+RUN bash -c "./utils/grype-docker-execute.sh"
