--- a/helper_dockerfiles/Dockerfile-py
+++ b/helper_dockerfiles/Dockerfile-py
@@ -12,4 +12,4 @@ RUN echo $(ls)
 RUN echo $(ls ./utils -la)
 RUN chmod +x ./utils/py-docker-execute.sh
 
-RUN bash -c "./py-docker-execute.sh"
+RUN bash -c "./utils/py-docker-execute.sh"
